# Parallel-Algorithms

./: .gitignore  README.md
assignments/final_project/: degree_study_loop_count_plot.py  degree_study_plot.py  degree_study_time_plot.py  mis_luby.cpp  mis_lubyA.cpp  mis_lubyA_example.cpp  mis_lubyB.cpp  mis_lubyB_example.cpp  readme.md  strong_scaling_plot.py  weak_scaling_plot.py
assignments/final_project/plot_files/: weak_scaling_plot.py
assignments/final_project/slurm_job_files_A/: output_ygm_mis_luby_consistency.13462844  output_ygm_mis_luby_degree.13463000  output_ygm_mis_luby_ss.13465219  output_ygm_mis_luby_ws.13465513  ygm_mis_luby_consistency.job  ygm_mis_luby_degree.job  ygm_mis_luby_ss.job
assignments/final_project/slurm_job_files_B/: output_ygm_mis_luby_consistency.13464649  output_ygm_mis_luby_degree.13465018  output_ygm_mis_luby_ss.13464398  output_ygm_mis_luby_ws.13463950  ygm_mis_luby_degree_fixed_e.job  ygm_mis_luby_degree_fixed_v.job  ygm_mis_luby_ws.job
assignments/hw1/: openmp_prefixsum.cpp  openmp_prefixsum_np_p.cpp  openmp_prefixsum_np_plus_p.cpp  openmp_prefixsum_seq.cpp  readme.md  strong_scaling.py  weak_scaling.py
assignments/hw2/: compilation.py  mpi_all_gather_p.cpp  mpi_all_gather_p.job  mpi_all_gather_p_std.cpp  mpi_all_gather_p_std.job  mpi_broadcast_logp.cpp  mpi_broadcast_logp.job  mpi_broadcast_logp_std.cpp  mpi_broadcast_logp_std.job  mpi_broadcast_p.cpp  mpi_broadcast_p.sh  mpi_gather_logp.cpp  mpi_gather_logp.sh  mpi_gather_logp_std.cpp  mpi_gather_logp_std.sh  mpi_reduce_logp.cpp  mpi_reduce_logp.sh  mpi_reduce_logp_std.cpp  mpi_reduce_logp_std.sh  mpi_reduce_logp_test.cpp  readme.md  weak_scaling.py  weak_scaling_grace.py  weak_scaling_plot.py
assignments/hw2/output_files/: output_mpi_all_gather_p.12633662  output_mpi_all_gather_p_std.12633699  output_mpi_broadcast_logp.12632454  output_mpi_broadcast_logp_std.12632455  output_mpi_broadcast_p.12632453  output_mpi_gather_logp.12632438  output_mpi_gather_logp_std.12632442  output_mpi_reduce_logp.12632447  output_mpi_reduce_logp_std.12632450
assignments/hw2/slurm_job_files/: mpi_all_gather_p.job  mpi_broadcast_logp.job  mpi_broadcast_p.job  mpi_gather_logp.job  mpi_gather_logp_std.job  mpi_reduce_logp.job  mpi_reduce_logp_std.job
assignments/hw3/: k_scaling.py  k_scaling_log_time.py  mpi_k_pivot_sort_balanced.cpp  mpi_pivot_sort.cpp  readme.md  strong_scaling.py  weak_scaling.py
assignments/hw4/: CMakeLists.txt  bfs_example.cpp  degree_experiment.py  delta_step_sssp.cpp  delta_step_sssp_custom_impl.cpp  delta_step_sssp_latest.cpp  delta_stepping.cpp  delta_stepping_rand.cpp  max_weight_experiment.py  readme.md  strong_scaling.py  weak_scaling.py
code_examples/: mpi_broadcast.cpp  mpi_ex1.cpp  mpi_ex2.cpp  mpi_ex3.cpp  mpi_pivot_sort.cpp  openmp_ex1.cpp  openmp_ex2.cpp  openmp_ex3.cpp  openmp_prefixsum.cpp  openmp_scaling_example.cpp  sequential_prefixsum.cpp
(+3 files in other folders)
